<resources>
    <string name="app_name">UIdesignOne</string>
    <string name="search">Search</string>
    <string name="map_type">Map Type</string>
    <string name="Bzoomin">+</string>
    <string name="Bzoomout">-</string>
    <string name="add_location">Add Location</string>
    <string name="add_a_tourist_spot">Add a Tourist Spot</string>
    <string name="been_here">Been Here</string>
    <string name="save_the_places_where_you_ve_been">Save the places where you\'ve been!</string>
    <string name="events">Events</string>
    <string name="discover_events_around_you">Discover Events Around You!</string>
    <string name="settings">Settings</string>
    <string name="personalize">Personalize</string>
    <string name="find_places_near_you">Find Places Near You</string>
    <string name="near_me">Near Me</string>
    <string name="enter_your_android_string_unknownname">enter your @android:string/unknownName</string>
    <string name="name">Name</string>
    <string name="enter_your_name">enter_name</string>
    <string name="info">information</string>
    <string name="button">Button</string>
    <string name="place_information">place_information</string>
    <string name="LSjDGyV9NmL6cx5vPyp">TrialNode</string>
    <string name="upload_data">Upload Data</string>
    <string name="choose_image">Choose Image</string>
    <string name="place_name">Place Name</string>
    <string name="bio">Bio</string>
    <string name="adloc">Adloc</string>
    <string name="data_uploaded">Data uploaded!</string>
    <string name="upload_data_here">upload data here!!!</string>
    <string name="lalbhai_dalpatbhai_museum">lalbhai_dalpatbhai_museum</string>
    <string name="title_history">HISTORY</string>
    <string name="title_attraction">ATTRACTION</string>
    <string name="title_haveli">HAVELI</string>
    <string name="title_street_food">STREET FOOD</string>
    <string name="adalaj_stepwell">Adalaj Vav</string>
    <string name="adalaj_stepwell_address">Adalaj Stepwell, Adalaj, Gujarat 382421, India</string>
    <string name="astodia_gate">Astodia Gate</string>
    <string name="astodia_gate_address">Astodia Gate Circle, Khamasa, Ahmedabad, Gujarat 380001, India</string>
    <string name="dada_harir_vav">Dada Harir Vav</string>
    <string name="dada_harir_vav_address">Dada Harir Vav, Asarwa, Ahmedabad, Gujarat 380016, India</string>
    <string name="hutheesing_jain_temple">Hathisingh Jain Temple</string>
    <string name="hutheesing_jain_temple_address">Hutheesing Jain Temple, Madhupura, Shahibaug Road, Bardolpura, Ahmedabad, Gujarat 380004, India</string>
    <string name="jama_masjid">Jumma Masjid</string>
    <string name="jama_masjid_address">Jumma Masjid, Ahmedabad, Gujarat 380001, India</string>
    <string name="jhulta_minar">Jhulta Minar(Sidi Bashir Mosque)</string>
    <string name="jhulta_minar_address">Kalupur Road, Sarangpur, Laxmi Bazar, Ahmedabad, Gujarat 380002, India </string>
    <string name="queen_mosque_sarangpur">Queen`s Mosque Sarangpur</string>
    <string name="queen_mosque_sarangpur_address">Queen\'s Tomb Ahmedabad, Gandhi Road, Khadia, Ahmedabad, Gujarat 380001, India</string>
    <string name="sarkhej_roza">Sarkhej Roza</string>
    <string name="sarkhej_roza_address">Sarkhej Roza Old Masjid, Ahmedabad, Gujarat 380051, India</string>
    <string name="sidi_saeed_mosque">Sidi Saeed’s Mosque</string>
    <string name="sidi_saeed_mosque_address">Sidi Saiyad Masjid, Ahmedabad, Gujarat 380001, India</string>
    <string name="teen_darwaza">Teen Darwaja or Tripolia Gate</string>
    <string name="teen_darwaza_address">Teen Darwaja, Ahmedabad, Gujarat 380001, India</string>
    <string name="ashish_mehta_heritage_home">Ashish Mehta\'s Heritage Home</string>
    <string name="ashish_mehta_heritage_home_address">1870, Moto Suthar Wado, Khadia, Ahmedabad, Gujarat 380001, India</string>
    <string name="ashok_bhatt_haveli">Ashok Bhatt Ni Haveli</string>
    <string name="ashok_bhatt_haveli_address">Kameshwar Ni Pol, Anandshankar Dhurav Road, Raipur, Ahmedabad, Gujarat 380001, India</string>
    <string name="chinubhai_baronet_house">Chinubhai Baronet House</string>
    <string name="chinubhai_baronet_house_address">Laxmi Bazar, Khadia, Ahmedabad, Gujarat 380002, India</string>
    <string name="dayabhai_mehta_haveli">Dayabhai Mehta Haveli</string>
    <string name="dayabhai_mehta_haveli_address">Khadia, Ahmedabad, Gujarat, India</string>
    <string name="diwanji_haveli">Diwanji Ni Haveli</string>
    <string name="diwanji_haveli_address"> Sankdi Sheri, Khadia, Ahmedabad, Gujarat 380001, India</string>
    <string name="dodhia_haveli">Dodhia Haveli</string>
    <string name="dodhia_haveli_address">Next to Goshaiji Temple, Simandhar Swami Temple, Doshiwadi Ni Pole, Zaveriwad, Kalupur, Ahmedabad, Gujarat 380001, India</string>
    <string name="french_haveli">French Haveli</string>
    <string name="french_haveli_address">1824, Khijada Sheri, Opposite Jain Temple, Dhal Ni Pol, Austodia chakla, Nichli Sheri Rd, Raipur, Khadia, Ahmedabad, Gujarat 380001, India</string>
    <string name="gaekwad_haveli">Gaekwad Haveli</string>
    <string name="gaekwad_haveli_address">Gaikyward haveli Road, Raikhad, Ahmedabad, Gujarat 380001, India</string>
    <string name="harkunvar_baa_haveli">Harkunvar Baa Ni Haveli</string>
    <string name="harkunvar_baa_haveli_address"> Address. Harkunvar Baa Ni Haveli, Tankshal, Ahmedabad, Gujarat 380001, India</string>
    <string name="hatheesing_haveli">Hatheesing Ni Haveli</string>
    <string name="hatheesing_haveli_address">Gheekanta Rd, Lati Bazaar, Dariyapur, Ahmedabad, Gujarat 380001, India</string>
    <string name="jagdip_mehta_house">Jagdip Mehta\'s House</string>
    <string name="jagdip_mehta_house_address">Motosuthar Vado Pole, Khadia, Ahmedabad, Gujarat 380001, India</string>
    <string name="jethabhai_haveli">Jethabhai Ni Haveli</string>
    <string name="jethabhai_haveli_address">Haveli No. 1765, Dhobini Pole Near Khadia Gate, Ahmedabad, Gujarat 380001, India</string>
    <string name="magan_bhai_haveli">Magan Bhai Ni Haveli</string>
    <string name="magan_bhai_haveli_address">Aka Sheth Kua Ni Pol, Raipur, Khadia, Ahmedabad, Gujarat 380001, India</string>
    <string name="mangaldas_haveli">Mangaldas Ni Haveli</string>
    <string name="mangaldas_haveli_address">Lakha Patel ni Pol, Sakdi Sheri, Kahadi, Ahmedabad, Gujarat 380001, India</string>
    <string name="naiwado_heritage_home">Naiwado Heritage Home</string>
    <string name="naiwado_heritage_home_address">Naiwado Heritage Home, Raipur Chakla, Raipur, Ahmedabad, Gujarat, India</string>
    <string name="ranjitbhai_vajubhai_divetia_haveli">Ranjitbhai Vajubhai Divetia\'s Haveli</string>
    <string name="ranjitbhai_vajubhai_divetia_haveli_address">Ranjitbhai Vajubhai Divetia Haveli, Lakha Patel Ni Pol, Khadia, Ahmedabad, Gujarat 380001, India</string>
    <string name="tankshal_haveli">Tankshal Haveli</string>
    <string name="tankshal_haveli_address">Tankshal ni Haveli, Kalupur, Ahmedabad, Gujarat, India</string>
    <string name="zumama_vadi">Zumama Ni Vadi</string>
    <string name="zumama_vadi_address">Zumama ni Vadi, Khadiya, Ahmedabad, Gujarat, India</string>
    <string name="building_1">Building_1</string>
    <string name="building_address">Vishwakarma Institute of Technology Main Building,Bibvewadi,Pune,Maharashtra 411037</string>
    <string name="library">VIT Library</string>
    <string name="library_address">VIT Library,Bibvewadi,Pune,Maharashtra 411037,VIT Library</string>
    <string name="fruit_center">Fruit_center</string>
    <string name="fruit_center_address">VIT Fruit Center,Bibvewadi,Pune,Maharashtra 411037,VIT Fruit Center</string>
    <string name="cc">Campus Communication</string>
    <string name="cc_address">VIT Campus Communication,Bibvewadi,Pune,Maharashtra 411037,VIT Campus Communication</string>
    <string name="camp_hanuman">Shree Camp Hanumanji Mandir</string>
    <string name="camp_hanuman_address">Sadar Bazar, Ahmedabad, Gujarat 380004, India</string>
    <string name="gandhi_ashram">Gandhi Ashram</string>
    <string name="gandhi_ashram_address">Gandhi Smarak Sangrahalaya, Ashram Rd, Ahmedabad, Gujarat 380027, India</string>
    <string name="hussain_doshi_gufa">Hussain Doshi\'s Gufa</string>
    <string name="hussain_doshi_gufa_address">Opposite L.D Engineering, Gujarat University campus, CEPT campus, Ahmedabad, Gujarat 380009, India</string>
    <string name="kankaria_lake">Kankaria Lake</string>
    <string name="kankaria_lake_address">Himmatnagar Village, Maninagar Area, Ahmedabad, Gujarat 380002, India</string>
    <string name="kite_museum">Kite Museum</string>
    <string name="kite_museum_address">Sankar Kender, Bhagtacharya Road, Kocharab, Paldi, Ahmedabad, Gujarat 380007, India</string>
    <string name="lalbhai_dalpatbhai_museum_address">L.D. Institute of Indology Campus, Nr. Gujarat University, Opp. L.D. Engineering Hostel, Navarangpura, Gujarat University Clock Tower, Ahmedabad, Gujarat 380009, India</string>
    <string name="sabarmati_riverfront">Sabarmati Riverfront</string>
    <string name="sabarmati_riverfront_address">Near Subhash Bridge, Dudeshwar, Ahmedabad, Gujarat 380004, India</string>
    <string name="sardar_patel_national_memorial">Sardar Patel National Memorial</string>
    <string name="sardar_patel_national_memorial_address">Gandhi-Sardar Smruthi Chowk,Opp. Circuit House, Shahibuag, Ahmedabad, Gujarat 380004, India</string>
    <string name="science_city">Science City</string>
    <string name="science_city_address">Gujarat Science City, Ahmedabad, Gujarat, India</string>
    <string name="shreyas_museum">Shreyas Museum</string>
    <string name="shreyas_museum_address">7/B, Shreyash Tekra Rd, Opposite Mithila Society, Bhudarpura, Ahmedabad, Gujarat 380015, India</string>
    <string name="vaishnodevi_temple">Vaishnodevi Temple</string>
    <string name="vaishnodevi_temple_address">Near Vaishno Devi Circle, Sarkhej - Gandhinagar Highway, Khodiyar, Ahmedabad, Gujarat 382481, India</string>
    <string name="vastrapur_lake">Vastrapur Lake</string>
    <string name="vastrapur_lake_address">Vastrapur Lake, Vastrapur, Ahmedabad, Gujarat, India</string>
    <string name="ambica_dalvada">Ambica Dalvada</string>
    <string name="ambica_dalvada_address">3, Shivam Complex, Narayan Pura, B/H H L Commerce College, Narayan Pura, Ahmedabad, Gujarat 380009, India</string>
    <string name="amod_kitchen">Amod\'s Kitchen</string>
    <string name="amod_kitchen_address">Paldi Gaam, Paldi, Ahmedabad, Gujarat 380007, India</string>
    <string name="baghdad_fry_center">Baghdad Fry Center</string>
    <string name="baghdad_fry_center_address">Dahyabhai Parmar Rd, Mirzapur, Khanpur, Ahmedabad, Gujarat 380001, India</string>
    <string name="bajrang_chole_kulcha">Bajrang Chole Kulcha at Municipal Market</string>
    <string name="bajrang_chole_kulcha_address">Near Sameer Building, Near Municipal Market, Navrangpura, Ahmedabad, Gujarat 380009, India</string>
    <string name="bera_samosa">Bera Samosa Center</string>
    <string name="bera_samosa_address">Nawab Plaza Shopping Center Opposite Royal Akbar Beside, Moti Bakery Street, Sarkhej Rd, Juhapura, Ahmedabad, Gujarat 380055, India</string>
    <string name="bhatiyar_gali">Bhatiyar Gali</string>
    <string name="bhatiyar_gali_address"> Patvasehri, Bhadra, Ahmedabad, Gujarat 380001, India</string>
    <string name="das_khaman">Das Khaman Outlets</string>
    <string name="das_khaman_address">2, Trade Center, Stadium Cross Rd, Navarangpura Gam, Navrangpura, Ahmedabad, Gujarat 380009, India</string>
    <string name="hl_college_road">HL College Road</string>
    <string name="hl_college_road_address">Near H.L Campus, S. V. Desai Road, Navrangpura, Ahmedabad, Gujarat 380009, India</string>
    <string name="add_current_location">Add Current Location</string>
    <string name="add_loc">ADD LOC</string>
</resources>