<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddLocActivity">

    <TextView
        android:id="@+id/gps_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="109dp"
        android:text="@string/add_current_location"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/placeName"
        android:hint="@string/place_name"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/add"
        android:text="@string/add_loc"
        android:layout_marginLeft="15dp"/>




</LinearLayout>
