<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout tools:context=".FirebaseDataEntryActivity"
    android:padding="15dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Place information" />

    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/placeName"
        android:hint="@string/place_name"/>


    <LinearLayout android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_gravity="center_horizontal">

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/uploadImage"
        android:layout_gravity="center_horizontal"
        android:text="@string/choose_image"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/submit"
        android:text="@string/upload_data"
        android:layout_marginLeft="15dp"/>

</LinearLayout>

</LinearLayout>